# MPS-Optimized-AlphaZero

./: .gitignore  CMakeLists.txt  README.md
python/: chess_game.py  main.py  mcts.py  network.py  trainer.py
src/: AlignedBuffer.h  Chess.cpp  Chess.h  GridSearch.cpp  MCTS.h  MCTS.mm  Network.h  TestRandom.cpp  Trainer.h  Trainer.mm  main.cpp
